--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 lib/github.com/diku-dk/segmented
 lib/github.com/diku-dk/sorts
 lib/github.com/diku-dk/vtree/*.c
+benchmarks/*.c
+benchmarks/benchmark_operations
+test/*.c
+test/test_operations
 benchmarks/data
